web/fix: project dashboard layout spacing

--- a/packages/web/styles/components/embedded-pages.module.scss
+++ b/packages/web/styles/components/embedded-pages.module.scss
@@ -13,15 +13,15 @@
     0px 1px 3px 0px rgba(16, 24, 40, 0.1);
   cursor: pointer;
 
-  @media (min-width: $mantine-breakpoint-2560) {
+  @media (min-width: $mantine-breakpoint-2xl) {
     width: rem(114);
     height: rem(114);
   }
-  @media (min-width: $mantine-breakpoint-3440) {
+  @media (min-width: $mantine-breakpoint-3xl) {
     width: rem(152);
     height: rem(152);
   }
-  @media (min-width: $mantine-breakpoint-3880) {
+  @media (min-width: $mantine-breakpoint-4xl) {
     width: rem(172);
     height: rem(172);
   }
@@ -33,15 +33,15 @@
 .image {
   max-width: 100%;
 
-  @media (min-width: $mantine-breakpoint-2560) {
+  @media (min-width: $mantine-breakpoint-2xl) {
     min-width: rem(60);
     min-height: rem(60);
   }
-  @media (min-width: $mantine-breakpoint-3440) {
+  @media (min-width: $mantine-breakpoint-3xl) {
     min-width: rem(76);
     min-height: rem(76);
   }
-  @media (min-width: $mantine-breakpoint-3880) {
+  @media (min-width: $mantine-breakpoint-4xl) {
     min-width: rem(86);
     min-height: rem(86);
   }
@@ -52,15 +52,15 @@
   height: rem(32);
   color: var(--mantine-color-primary-5);
 
-  @media (min-width: $mantine-breakpoint-2560) {
+  @media (min-width: $mantine-breakpoint-2xl) {
     width: rem(60);
     height: rem(60);
   }
-  @media (min-width: $mantine-breakpoint-3440) {
+  @media (min-width: $mantine-breakpoint-3xl) {
     width: rem(76);
     height: rem(76);
   }
-  @media (min-width: $mantine-breakpoint-3880) {
+  @media (min-width: $mantine-breakpoint-4xl) {
     width: rem(86);
     height: rem(86);
   }
@@ -69,15 +69,15 @@
 .plusIcon {
   color: var(--mantine-color-neutral-3);
 
-  @media (min-width: $mantine-breakpoint-2560) {
+  @media (min-width: $mantine-breakpoint-2xl) {
     width: rem(42);
     height: rem(42);
   }
-  @media (min-width: $mantine-breakpoint-3440) {
+  @media (min-width: $mantine-breakpoint-3xl) {
     width: rem(58);
     height: rem(58);
   }
-  @media (min-width: $mantine-breakpoint-3880) {
+  @media (min-width: $mantine-breakpoint-4xl) {
     width: rem(64);
     height: rem(64);
   }
