--- a/packages/web/styles/components/project.module.scss
+++ b/packages/web/styles/components/project.module.scss
@@ -1,14 +1,8 @@
 .embedGridCol {
   flex-basis: rem(96);
 
-  @media (min-width: $mantine-breakpoint-2560) {
-    flex-basis: rem(210);
-  }
-  @media (min-width: $mantine-breakpoint-3440) {
-    flex-basis: rem(280);
-  }
-  @media (min-width: $mantine-breakpoint-3880) {
-    flex-basis: rem(316);
+  @media (min-width: $mantine-breakpoint-2xl) {
+    flex-basis: 8.5%;
   }
 }
 
@@ -17,13 +11,7 @@
 }
 
 .notesLinksGridCol {
-  @media (min-width: $mantine-breakpoint-2560) {
-    min-width: rem(895);
-  }
-  @media (min-width: $mantine-breakpoint-3440) {
-    min-width: rem(1203);
-  }
-  @media (min-width: $mantine-breakpoint-3880) {
-    min-width: rem(1356);
+  @media (min-width: $mantine-breakpoint-2xl) {
+    min-width: 36%;
   }
 }
